--- a/sdk/test/index.html
+++ b/sdk/test/index.html
@@ -12,6 +12,8 @@
 	<script src="../pineapple.js"></script>
 </head>
 <body>
+	<img src="http://www.pwstrick.com/img/ava.png" />
+	<script src="lib/zepto.js"></script>
 	<script src="test.js"></script>
 </body>
 </html>
