layout back office

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,36 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8"/>
-	<title>脚手架示例</title>
+	<title>菠萝监控系统</title>
 </head>
 <body>
-	<div id="root"></div>
+	<!--Header-part-->
+	<div id="header">
+		<h1><a href="/">菠萝监控系统</a></h1>
+	</div>
+	<!--close-Header-part--> 
+	<!--top-Header-menu-->
+	<div id="user-nav"></div>
+	<!--close-top-Header-menu-->
+	<!--sidebar-menu-->
+	<div id="sidebar"></div>
+	<!--sidebar-menu-->
+	<!--main-container-part-->
+	<div id="content">
+		<!--breadcrumbs-->
+		<div id="content-header">
+			<div id="breadcrumb"></div>
+		</div>
+		<!--End-breadcrumbs-->
+		<div class="container-fluid">
+			<div id="root"></div>
+		</div>
+	</div>
+	<!--end-main-container-part-->
+	<!--Footer-part-->
+	<div class="row-fluid">
+		<div id="footer"></div>
+  	</div>
+  	<!--end-Footer-part-->
 </body>
 </html>
