--- a/sdk/test/index.html
+++ b/sdk/test/index.html
@@ -6,7 +6,8 @@
 	<script type='text/javascript'>
 		window.pineapple || (pineapple={});
 		pineapple.param = {
-		  "token":"dsadasd2323dsad23dsada"
+		  "token":"dsadasd2323dsad23dsada",
+		  "rate": 1
 		};
 	  </script>
 	<script src="../pineapple.js"></script>
