description of the table of contents

--- a/sdk/test/index.html
+++ b/sdk/test/index.html
@@ -6,7 +6,7 @@
 	<script type='text/javascript'>
 		window.pineapple || (pineapple={});
 		pineapple.param = {
-		  "token":"dsadasd2323dsad23dsada",
+		  "token":"5fa218d0246554860f3ee3f14238f541",
 		  "rate": 1
 		};
 	  </script>
